# python-perception-guardian

./: .gitignore  LICENSE  README.md  config.example.yaml  i18n-calls.py  justfile  pyproject.toml
guardian/: __init__.py  app.py  config.py  database.py  filters.py  i18n.py  log.py  qna.py  qwant.py  redis.py  settings.py  util.py
i18n/: en.yaml  ru.yaml
migrations/: 001-create-tables.sql
tests/: test_perception.py
