[tool.poetry]
name = "perception-guardian"
version = "0.1.0"
description = "Telegram bot with image-emoji CAPTCHA challenge-response"
license = "MIT"
authors = ["Vyacheslav Konovalov <crabvk@protonmail.com>"]
packages = [
    {include = "guardian"}
]

[tool.poetry.scripts]
guardian = "guardian:cli"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8"
aiogram = "^2.22"
aioredis = "^2.0"
PyYAML = "^6.0"
aiosqlite = "^0.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 100
