[tool.poetry]
name = "perception-guardian"
version = "0.2.0"
description = "Telegram bot with image-emoji CAPTCHA challenge-response"
license = "MIT"
authors = ["Vyacheslav Konovalov <crabvk@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "guardian"}
]

[tool.poetry.scripts]
guardian = "guardian:cli"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8"
aiogram = "^2.25"
PyYAML = "^6.0"
aiosqlite = "^0.19"
redis = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
autopep8 = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 100
